# tulsa

./: .gitignore  Cargo.toml  README.md  cargo.toml  creator_crm.db  crm_cli.sh  handlers.rs  main.rs  project  quickstart  server.rs  start.sh
ios/: ContentView.swift  README.md  TerminalViewModel.swift  iLonhroTerminalApp.swift
src/: db.rs  main.rs  models.rs
static/: index.html  styles.css
