[package]
name = "ilonhro_terminal"
version = "0.1.0"
edition = "2021"
authors = ["In recognition of Roy and Leon Daley"]
description = "iLonhro Terminal - iPhone/iCloud style Linux terminal emulator"

[[bin]]
name = "ilonhro_terminal"
path = "main.rs"

[[bin]]
name = "ilonhro_server"
path = "server.rs"

[dependencies]
anyhow = "1.0.101"
axum = { version = "0.8.8", features = ["ws"] }
crossterm = "0.29.0"
futures-util = "0.3.31"
portable-pty = "0.9.0"
ratatui = "0.29.0"
tokio = { version = "1.49.0", features = ["full"] }
